tests/kiama/negative/type_errors/L1/4_const1.ob
MODULE const;

CONST    
    aconst = 1 DIV 0;

END const.
